--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <title>C2LC Coding Environment</title>
+    <title>Inclusive Coding Environment</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
